--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/SadiatunNurulHikmah/LatihanSanberCodeBatch41/issues"
   },
-  "homepage": "https://github.com/SadiatunNurulHikmah/LatihanSanberCodeBatch41#readme"
+  "homepage": "https://github.com/SadiatunNurulHikmah/LatihanSanberCodeBatch41#readme",
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  }
 }
