--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Latihan Kelas Karyawan QA Automation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "testSquareRoot": "node TugasPekanan3Javascript/squareroot.js",
+    "testTotalQuantity": "node TugasPekanan3Javascript/totalquantity.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SadiatunNurulHikmah/LatihanSanberCodeBatch41.git"
   },
-  "author": "",
+  "author": "Diah",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SadiatunNurulHikmah/LatihanSanberCodeBatch41/issues"
