--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SadiatunNurulHikmah/LatihanSanberCodeBatch41#readme",
   "dependencies": {
+    "cypress": "^12.5.0",
     "prompt-sync": "^4.2.0"
   }
 }
