--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/SadiatunNurulHikmah/LatihanSanberCodeBatch41#readme",
   "dependencies": {
-    "cypress": "^12.5.0",
     "prompt-sync": "^4.2.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "cypress": "^12.5.0",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
