--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "testSquareRoot": "node TugasPekanan3Javascript/squareroot.js",
-    "testTotalQuantity": "node TugasPekanan3Javascript/totalquantity.js"
+    "testTotalQuantity": "node TugasPekanan3Javascript/totalquantity.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
